src/objects/Product_Offerings__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>(Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This data element shows the account owner&apos;s name.</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Offerings</relationshipLabel>
        <relationshipName>Product_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campus_Consultant__c</fullName>
        <formula>Account__r.Campus_Consultant__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Campus_Consultant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This data element shows the Campus Consultant for the account.</inlineHelpText>
        <label>Campus Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Branding__c</fullName>
        <label>Co-Branding?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Logo and Banner</fullName>
                </value>
                <value>
                    <fullName>Logo Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDMS__c</fullName>
        <label>EDMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Responsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Literacy__c</fullName>
        <label>Financial Literacy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SALT Courses</fullName>
                </value>
                <value>
                    <fullName>Scholarship Search</fullName>
                </value>
                <value>
                    <fullName>Job/Internship Search</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSLDS_Files__c</fullName>
        <label>NSLDS Files</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Granted</fullName>
                </value>
                <value>
                    <fullName>School Provides</fullName>
                </value>
                <value>
                    <fullName>Access Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Tile__c</fullName>
        <label>Promo Tile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotional_Items__c</fullName>
        <label>Promotional Items</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SALT Store</fullName>
                </value>
                <value>
                    <fullName>Access to PDFs / eDocs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_To_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A checkmark in this box will send an email alert to Della. She will review the item and, when approved, will submit it to Business Analysis for entry into the SALT Shaker.</inlineHelpText>
        <label>Ready To Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sends_Demog_File__c</fullName>
        <inlineHelpText>This field indicates whether or not the customer provides us with a SALT Demographic File.</inlineHelpText>
        <label>Sends Demog File?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - w/ SS#</fullName>
                </value>
                <value>
                    <fullName>Yes - w/ Unique ID</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_to_BA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit to BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Faculty/Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vanity_URL__c</fullName>
        <inlineHelpText>This field indicates whether or not the customer is using a SALT vanity URL.</inlineHelpText>
        <label>Vanity URL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Offerings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Offerings  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Offerings</pluralLabel>
    <recordTypes>
        <fullName>Credit_Union</fullName>
        <active>true</active>
        <label>Credit Union</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engagement_Partner</fullName>
        <active>true</active>
        <label>Engagement Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>true</active>
        <label>School</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proactive_EDMS_Requires_NSLDS_Info</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(EDMS__c,&apos;Proactive&apos;),

OR(ISPICKVAL(NSLDS_Files__c, &quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>NSLDS_Files__c</errorDisplayField>
        <errorMessage>You must provide a response for NSLDS Files if EDMS = Proactive.</errorMessage>
    </validationRules>
</CustomObject>